--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <title>My Sudoku</title>
   <link href="sudoku.css" rel="stylesheet" type="text/css" />
-  <script src="https://cdn.jsdelivr.net/npm/vue" type="text/javascript"></script>
+  <script src="vue.js" type="text/javascript"></script>
   <script src="sudoku.js" type="text/javascript"></script>
 
 <body>
